youtube embeds are no longer stretched

--- a/public/bootstrap/less/trp3Chat.less
+++ b/public/bootstrap/less/trp3Chat.less
@@ -340,7 +340,7 @@ pre code {
 }
 
 .trpChatItem iframe {
-  width: 100%;
+  max-width: 100%;
 }
 
 .trpChatItem {
